KYC individual improvements and WIP swagger
